--- a/Contact.html
+++ b/Contact.html
@@ -24,7 +24,7 @@
         <!--Since this webpage using utf-8 as encoded type, let to change the encoded type for Email-->
         <!--<form action="mailto:xx@gmail.com" method="post" enctype="text/plain">-->
    
-        <form action="mailto:ritchietou892@gmail.com" method="post" enctype="text/plain"> 
+        <form action="mailto:xxx.com" method="post" enctype="text/plain"> 
 
             <!-- attribute values of "type":
             text   Default. Defines a single-line text field
